--- a/multi-image-selector/build.gradle
+++ b/multi-image-selector/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
         minSdkVersion 12
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.1"
     }
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
 }
