--- a/multi-image-selector/src/main/AndroidManifest.xml
+++ b/multi-image-selector/src/main/AndroidManifest.xml
@@ -6,7 +6,15 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application android:allowBackup="true">
-
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.mis.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/mis_file_paths"/>
+        </provider>
         <activity
             android:configChanges="orientation|screenSize"
             android:name="me.nereo.multi_image_selector.MultiImageSelectorActivity" />
