--- a/multi-image-selector/build.gradle
+++ b/multi-image-selector/build.gradle
@@ -25,3 +25,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
 }
+
+apply from: "bintrayUpload.gradle"
