--- a/multi-image-selector/build.gradle
+++ b/multi-image-selector/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 12
         targetSdkVersion 25
         versionCode 1
-        versionName "1.1"
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -22,8 +22,13 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:25.1.0'
+}
+
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
 }
 
 apply from: "bintrayUpload.gradle"
