support set status bar and action bar color

--- a/multi-image-selector/build.gradle
+++ b/multi-image-selector/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.1'
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
-        minSdkVersion 12
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.2.1"
@@ -23,6 +23,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jaeger.statusbarutil:library:1.4.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
 }
 
@@ -30,5 +31,3 @@ tasks.withType(Javadoc) {
     options.addStringOption('Xdoclint:none', '-quiet')
     options.addStringOption('encoding', 'UTF-8')
 }
-
-apply from: "bintrayUpload.gradle"
